testsuite/poke.pkl/cast-union-diag-1.pk
/* { dg-do compile } */

type Union = union { int i : i > 10; string s; };

"foo" as Union; /* { dg-error "invalid cast" } */
